<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/backgroundAboutUs"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/coins_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/coins_picture"
        app:srcCompat="@drawable/app_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_app"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textSize="19sp"
        android:textIsSelectable="true"
        android:linksClickable="true"
        android:autoLink="all"
        android:layout_marginBottom="50dp"
        android:textColorLink="@android:color/holo_blue_dark" />


</LinearLayout>