<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="50dp">


            <ImageView
                android:id="@+id/text_jackpot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/text_jackpot"
                app:layout_constraintBottom_toTopOf="@+id/field_jackpot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/text_jackpot" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/board_jackpot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_jackpot">


                <ImageView
                    android:id="@+id/field_jackpot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/field_jackpot"
                    app:srcCompat="@drawable/field_jackpot" />

                <TextView
                    android:id="@+id/textView_jackpot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingTop="5dp"
                    android:text="@string/jackpot_sum"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />
            </RelativeLayout>


            <ImageView
                android:id="@+id/board_jackpot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/board_jackpot"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/field_jackpot"
                app:srcCompat="@drawable/board_jackpot" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layoutCentre"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                app:srcCompat="@drawable/logo" />

            <include
                layout="@layout/slots"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="65dp"
                android:contentDescription="@string/spinner_shape" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/textViewCombinations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/combinations"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/board_combinations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/board_combinations"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCombinations"
                app:srcCompat="@drawable/board_combinations" />

        </LinearLayout>
    </LinearLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="4dp">


        <Button
            android:id="@+id/button_blue_small"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn_settings"
            android:onClick="btnSettings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayoutBlock2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_small" />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutBlock2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/field_lines"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_blue_small">

            <RelativeLayout
                android:id="@+id/field_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/field_coins1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/field_coins"
                    android:paddingStart="40dp"
                    app:srcCompat="@drawable/field_coins" />

                <TextView
                    android:id="@+id/textView_coins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingStart="40dp"
                    android:text="1200"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/coins_picture"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="61dp"
                android:layout_toStartOf="@+id/field_coins"
                android:contentDescription="@string/coins_picture"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/field_coins"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/coins_picture" />

            <TextView
                android:id="@+id/coins_descript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingStart="40dp"
                android:paddingTop="50dp"
                android:text="@string/my_coins"
                android:textColor="@android:color/white"
                android:textSize="9sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/field_coins" />
        </android.support.constraint.ConstraintLayout>


        <RelativeLayout
            android:id="@+id/field_lines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/block"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayoutBlock2"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/field_lines1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/field_lines"
                app:srcCompat="@drawable/field_lines"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/textView_field_lines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="1"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_field_lines_descript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/lines"
                android:paddingTop="50dp"
                android:textColor="@android:color/white"
                android:textSize="9sp" />
        </RelativeLayout>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_big"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/field_lines"
            app:layout_constraintTop_toTopOf="parent">


            <RelativeLayout
                android:id="@+id/field_bet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/field_bet1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/field_bet"
                    app:srcCompat="@drawable/field_bet"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/textView_field_bet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/start_bet"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/field_bet_descript"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingTop="50dp"
                    android:text="@string/bet"
                    android:textColor="@android:color/white"
                    android:textSize="9sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_small_plus"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="80dp"
                android:background="@drawable/btn_smal"
                android:onClick="btnPlus"
                android:text="@string/plus"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/field_bet"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/button_small" />

            <Button
                android:id="@+id/button_small_minus"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/btn_smal"
                android:onClick="btnMinus"
                android:text="@string/minus"
                android:textColor="@android:color/black"
                android:textSize="27sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/field_bet"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/button_small" />

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/button_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn_spin"
            android:onClick="btnSpin"
            android:text="@string/spin"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/block"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>